update to fix css when on mobile

--- a/default.css
+++ b/default.css
@@ -432,3 +432,8 @@ h6 { font-size: 16px;}
 	}
 
 }
+@media screen and (max-width: 400px){
+#preview {
+    width: auto;
+}
+}
